--- a/form/02-styles.css
+++ b/form/02-styles.css
@@ -671,7 +671,7 @@
   }
 
   fieldset {
-    flex: display;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     border: none;
