--- a/sass_scss/10-import_colors.scss
+++ b/sass_scss/10-import_colors.scss
@@ -1,5 +1,15 @@
 /* Imports colors */
 
-@import "$red";
-@import "green";
-@import "$blue";
+@import "10-colors";
+
+.red {
+  color: $red;
+}
+
+.green {
+  color: $green;
+}
+
+.blue {
+  color: $blue;
+}
