--- a/sass_scss/11-loop_photos.scss
+++ b/sass_scss/11-loop_photos.scss
@@ -1,6 +1,6 @@
 /* Creates a class for each name in the list */
 
-@import "11-photos";
+@import '11-photos';
 
 @each $name in $list-names {
   .photo-#{$name} {
