--- a/sass_scss/100-loop_col.scss
+++ b/sass_scss/100-loop_col.scss
@@ -1,7 +1,7 @@
 /* Creates classes with various widths */
 
 @for $item from 1 through 4 {
-  col-#{$item} {
+  .col-#{$item} {
     width: 100% / $item;
   }
 }
